@@ -1,10 +1,0 @@
-#undef ENABLE_NLS
-#undef HAVE_CATGETS
-#undef HAVE_GETTEXT
-#undef GETTEXT_PACKAGE
-#undef HAVE_LC_MESSAGES
-#undef HAVE_STPCPY
-#undef HAVE_LIBSM
-#undef ID3LIB_MAJOR
-#undef ID3LIB_MINOR
-#undef ID3LIB_PATCH
