@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(gtkpod, 0.60)
+AM_INIT_AUTOMAKE(gtkpod, 0.61-CVS)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 AC_CANONICAL_HOST
@@ -16,10 +16,6 @@ if test "x$GCC" = "xyes"; then
     CFLAGS="$CFLAGS -Wall"
   fi
 fi
-
-AC_ARG_ENABLE(shared_id3,
-	[  --disable-shared-id3    use static id3lib],
-        , enable_shared_id3=yes)
 
 pkg_modules="gtk+-2.0 >= 2.0.0 gthread-2.0 >= 0.14.0"
 PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
@@ -47,26 +43,16 @@ AC_CHECK_FUNCS(getopt_long_only, , [AC_LIBOBJ(getopt)])
 AC_CHECK_FUNCS(getopt_long_only, , [AC_LIBOBJ(getopt1)]) 
 
 dnl Check for libmp4v2
-dnl -- there must be a better way to read out the result of the first
-dnl -- check than running it again with "libmp4v2=..."
-AC_CHECK_LIB(mp4v2, MP4FileInfo,,,-lstdc++)
-AC_CHECK_LIB(mp4v2, MP4FileInfo,libmp4v2=1,libmp4v2=0,-lstdc++)
+AC_SEARCH_LIBS(MP4FileInfo, "mp4v2" "mp4v2 -lstdc++" "mp4v2 -lz" "mp4v2 -lz -lstdc++",[have_mp4v2="yes -- will build with aac support",AC_DEFINE_UNQUOTED(HAVE_MP4V2, 1, ["Define to 1 if you have the mp4v2 library"])],have_mp4v2="***no -- will build without aac support")
 
 dnl Id3lib librairies
 dnl Check which libs are required by id3lib
 AC_SEARCH_LIBS(ID3Tag_Link,"id3" "id3 -lstdc++" "id3 -lz" "id3 -lz -lstdc++",,AC_MSG_ERROR(id3lib not found))
-if test "$enable_shared_id3" = "yes"; then
-  echo "using shared id3lib"
-  LIBS="-lz -lstdc++ $LIBS"
-else
-  echo "using static id3lib"
-  LIBS="$prefix/lib/libid3.a -lz -lstdc++ $LIBS"
-fi
 
 dnl expected version for cross compiling
 ID3LIB_MAJOR=3
 ID3LIB_MINOR=8
-ID3LIB_PATCH=0
+ID3LIB_PATCH=3
 
 AC_MSG_CHECKING(for id3lib version)
       AC_TRY_RUN([
@@ -98,20 +84,15 @@ Configuration for $PACKAGE $VERSION :
 
  Source code location .: $srcdir
  Host System Type .....: $host
+ Install path .........: $prefix
  Preprocessor .........: $CC $CPPFLAGS
  Compiler .............: $CC $CFLAGS $LIBFLAC_CFLAGS
  Linker ...............: $CC $LDFLAGS $LIBS $LIBFLAC_LIBS
  GTK+ version .........: `pkg-config gtk+-2.0 --modversion`
  GThread version ......: `pkg-config gthread-2.0 --modversion`
+ NLS/gettext ..........: $USE_NLS
  Id3lib version .......: $ID3LIB_MAJOR.$ID3LIB_MINOR.$ID3LIB_PATCH
- NLS/gettext ..........: $USE_NLS"
-if test "$libmp4v2" = "1"; then
-  echo " mp4v2 ................: yes"
-else
-  echo " mp4v2 ................: no -- limited aac functionality"
-fi
-echo "\
- Install path .........: $prefix
+ mp4v2lib .............: $have_mp4v2
 
  Now type 'make' to build $PACKAGE $VERSION,
  and then 'make install' for installation.
